# ChessVision-3LC

./: .gitignore  .gitmodules  README.md  download_raw_data.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
chessvision/: utils.py
chessvision/board_extraction/: clamp_images.py  loss_collector.py  train_unet.py
chessvision/piece_classification/: data.py  model.py  train_classifier.py  training_utils.py
chessvision/predict/: classify_board.py  classify_raw.py  extract_board.py  extract_squares.py
chessvision/test/: __init__.py  test.py
notebooks/: add-value-map.ipynb  clean_vision_3lc.ipynb  clean_vision_3lc_segmentation.ipynb  cleanlab_3lc.ipynb  filter.ipynb  model-summary.ipynb  upload-to-atlas.ipynb
