[tool.poetry]
name = "chessvision"
version = "0.1.0"
description = "Classification of pieces and segmentation of boards in chess images"
authors = ["Gudbrand Tandberg <gudbrandduff@fmail.com>"]
readme = "README.md"

[tool.ruff]
line-length = 120
select = ["C", "E", "F", "W", "I", "YTT", "UP"]

[tool.black]
line-length = 120

